# SFMLTemplate

./: README.md
SFMLtest/: CMakeLists.txt  main.cpp
